--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^3.7.5"
+  },
+  "scripts": {
+    "serve": "parcel index.html"
   }
 }
